modal behind side-menu-bug fixed

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    margin: 10px 20px 0px 60px;
+    margin: 10px 30px 0px 30px;
     background-color: rgb(81, 63, 162);
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
@@ -43,8 +43,9 @@ header>a {
 
 #logo {
     display: block;
-    width: calc(50% + 80px);
+    width: calc(100%);
     float: left;
+    margin-bottom: 20px;;
 }
 
 body>h2 {
